доработал стили для body

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -36,11 +39,6 @@ ul,
 ol {
   list-style: none;
 }
-
-
-
-
-
 
 .visually-hidden {
   position: absolute;
