--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,7 @@ ol {
 
 .search-form__label {
   display: flex;
+  align-items: center;
   width: fit-content;
   cursor: pointer;
 }
@@ -109,9 +110,9 @@ ol {
 
 .search-form__textfield {
   border: none;
-  border-block-start: 1px solid #FFF;
-  border-block-end: 1px solid #FFF;
-  color: rgba(255, 255, 255, 0.70);
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
+  color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -129,7 +130,7 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   cursor: pointer;
   inline-size: 19px;
   block-size: 19px;
@@ -137,14 +138,14 @@ ol {
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: '';
-  background-color: #FFF;
+  background-color: #fff;
   inline-size: 14px;
   block-size: 14px;
 }
 
 .search-form__checkbox:active + .search-form__pseudo-checkbox::after {
   content: '';
-  background-color: #FFF;
+  background-color: #fff;
   inline-size: 14px;
   block-size: 14px;
 } 
@@ -154,35 +155,22 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form__label:hover,
-.button:hover {
-  text-decoration: underline;
-  cursor: url(../images/cursor.png), pointer;
-}
-
-.search-form__label .search-form__textfield:hover {
-  text-decoration: none;
+.search-form__label-text {
+  padding-inline-start: 5px;
 }
 
 .search-form__label:active {
   text-decoration: none;
 }
 
-.search-form__label-none:hover {
-  text-decoration: none;
-}
-
-.search-form__textfield:hover {
-  cursor: url(../images/cursor-input.png), pointer;
-}
-
-.search-form__label-text {
-  padding-inline-start: 5px;
+.search-form__label:hover .search-form__label-text,
+.button:hover {
+  text-decoration: underline;
 }
 
 .button {
-  border: 1px solid #FFF;
-  color: #FFF;
+  border: 1px solid currentColor;
+  color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -195,10 +183,6 @@ ol {
 
 .button:focus {
   outline: none;
-}
-
-.button:hover {
-  cursor: url(./cursor.png);
 }
 
 .button:active {
@@ -222,7 +206,6 @@ ol {
 }
 
 .more-button:focus-visible {
-  outline: 1px solid #fff;
   outline-offset: -2px;
 }
 
@@ -243,7 +226,7 @@ ol {
 }
 
 .content__list {
-  overflow: hidden auto;
+  overflow: auto;
   block-size: 298px;
 }
 
@@ -279,7 +262,7 @@ ol {
 
 .content__video-card-title {
   overflow: hidden;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%; /* 30px */
@@ -289,13 +272,9 @@ ol {
 }
 
 .content__video-card-description {
+  max-width: 200px;
   margin-block-start: 6px;
   line-height: 16.2px;
-}
-
-.content__card-link {
-  color: #FFF;
-  text-decoration: none;
 }
 
 .content__card-link_current {
@@ -308,7 +287,7 @@ ol {
 
 .content__card-link:hover {
   text-decoration: underline 1px;
-  cursor: url(../images/cursor.png), pointer;
+  cursor: pointer;
 }
 
 .content__card-link:active {
@@ -318,6 +297,8 @@ ol {
 
 .content__card-link:focus-visible {
   margin: 2px;
-  border: 1px solid #FFF;
+  outline: 1px solid #fff;
 }
+
+
 
